--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.18.2",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.2",
-    "multer": "^1.4.5"
+    "multer": "1.4.5-lts.1"
+
   }
 }
